--- a/oscar/order_management/templates/order_management/browse.html
+++ b/oscar/order_management/templates/order_management/browse.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
+{% load currency_filters %}
+
 {% block header %}
 <h2>Order management</h2>
 {% endblock header %}
@@ -20,7 +22,7 @@
     {% for order in orders %}
     <tr>
         <td>{{ order.number }}</td>
-        <td>{{ order.total_incl_tax }}</td>
+        <td>{{ order.total_incl_tax|currency }}</td>
         <td>{{ order.shipping_address }}</td>
         <td>{{ order.date_placed }}</td>
         <td>
