--- a/oscar/product/templates/product/browse.html
+++ b/oscar/product/templates/product/browse.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
+{% load currency_filters %}
+
 {% block header %}
 <h2>{{ summary }}</h2>
 {% endblock header %}
@@ -14,10 +16,10 @@
 <li>
     <a href="{{ product.get_absolute_url }}">{{ product.get_title }}</a><br/>
     {% if product.is_group %}
-        From &pound;{{ product.min_variant_price_incl_tax }}
+        From {{ product.min_variant_price_incl_tax|currency }}
     {% else %}
         {% if product.has_stockrecord %} 
-            &pound;{{ product.stockrecord.price_incl_tax }}<br/>
+            {{ product.stockrecord.price_incl_tax|currency }}<br/>
             {{ product.stockrecord.availability }}
         {% else %}
             Not available    
