--- a/oscar/product/templates/product/item.html
+++ b/oscar/product/templates/product/item.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
+{% load currency_filters %}
+
 {% block header %}
 <h2>{{item.get_title}}</h2>
 {% endblock header %}
@@ -15,10 +17,10 @@
         <th>Product class</th><td><a href="{{ item.item_class.get_absolute_url }}">{{item.item_class.name}}</a></td>
     </tr>
     <tr>
-        <th>Price (excl. tax)</th><td>{{item.stockrecord.price_incl_tax}}</td>
+        <th>Price (excl. tax)</th><td>{{item.stockrecord.price_incl_tax|currency}}</td>
     </tr>
     <tr>
-        <th>Price (incl. tax)</th><td>{{item.stockrecord.price_excl_tax}}</td>
+        <th>Price (incl. tax)</th><td>{{item.stockrecord.price_excl_tax|currency}}</td>
     </tr>
     <tr>
         <th>Availability</th>
