--- a/oscar/checkout/templates/checkout/preview.html
+++ b/oscar/checkout/templates/checkout/preview.html
@@ -49,7 +49,7 @@
     <tbody>
         <tr>
             <td>{{ method.name }}</td>
-            <td>{{ method.calculate_basket_charge|currency }}</td>
+            <td>{{ method.basket_charge_incl_tax|currency }}</td>
             <td>{{ method.description }}</td>
             <td></td>
     </tbody>
