--- a/oscar/checkout/templates/checkout/shipping_methods.html
+++ b/oscar/checkout/templates/checkout/shipping_methods.html
@@ -50,7 +50,7 @@
         {% for method in methods %}
         <tr>
             <td>{{ method.name }}</td>
-            <td>{{ method.calculate_basket_charge|currency }}</td>
+            <td>{{ method.basket_charge_incl_tax|currency }}</td>
             <td>{{ method.description }}</td>
             <td>
                 <form method="post" action="{% url oscar-checkout-shipping-method %}">
