Updated order management to show a summary of shipping events for each line

--- a/oscar/customer/templates/customer/order.html
+++ b/oscar/customer/templates/customer/order.html
@@ -56,7 +56,7 @@
             <td>{{ line.quantity }}</td>
             <td>{{ line.line_price_excl_tax|currency }}</td>
             <td>{{ line.line_price_incl_tax|currency }}</td>
-            <td>{{ line.status }}</td>
+            <td>{{ line.shipping_status }}</td>
         </tr>
         {% endfor %}
     </table>
