--- a/oscar/order_management/templates/order_management/order.html
+++ b/oscar/order_management/templates/order_management/order.html
@@ -52,15 +52,20 @@
         <th>Quantity</th>
         <th>Line price excl tax</th>
         <th>Line price incl tax</th>
+        <th>Shipping status</th>
     </tr>
     {% for line in batch.lines.all %}
     <tr>
-        <th><input type="checkbox" name="order_line" value="{{ line.id }}"/></th>
+        <th>
+            <input type="checkbox" name="order_line" value="{{ line.id }}"/>
+            <input type="input" size="4" name="order_line_quantity_{{ line.id}}" value="{{ line.quantity }}" />
+        </th>
         <td><a href="{{ line.product.get_absolute_url }}">{{ line.description }}</a></td>
         <td>{{ line.product.stockrecord.availability }}</td>
         <td>{{ line.quantity }}</td>
         <td>{{ line.line_price_excl_tax|currency }}</td>
         <td>{{ line.line_price_incl_tax|currency }}</td>
+        <td>{{ line.shipping_status }}</td>
     </tr>
     {% endfor %}
     <tr>
