Added basic address book functionality

--- a/oscar/customer/templates/customer/profile.html
+++ b/oscar/customer/templates/customer/profile.html
@@ -37,6 +37,7 @@
 
 <h3>Account settings</h3>
 <ul>
+    <li><a href="{% url oscar-customer-address-book %}">Manage address book</a></li>
     <li><a href="">Change password</a></li>
 </ul>
 
