--- a/oscar/templates/layout.html
+++ b/oscar/templates/layout.html
@@ -9,6 +9,14 @@
                 <input type="text" name="q" id="search_input" value="{{ search_term }}"/>
                 <input type="submit" value="Go!" /> 
             </form>
+            
+            {% if user.is_authenticated %}
+            <a href="">Profile</a>
+            <a href="">Logout</a>
+            {% else %}
+            <a href="">Login</a>
+            {% endif %}
+            
             {% block header %}
             {% endblock %}
         </div>
