don't print stock related info if there's no stock record

--- a/oscar/templates/product/item.html
+++ b/oscar/templates/product/item.html
@@ -16,6 +16,7 @@
     <tr>
         <th>Product class</th><td><a href="{{ item.item_class.get_absolute_url }}">{{item.item_class.name}}</a></td>
     </tr>
+{% if item.stockrecord %}
     <tr>
         <th>Price (excl. tax)</th><td>{{item.stockrecord.price_incl_tax|currency}}</td>
     </tr>
@@ -26,6 +27,7 @@
         <th>Availability</th>
         <td>{{ item.stockrecord.availability }}</td>
     </tr>
+{% endif %}
     <tr>
         <th>Product type</th>
         <td>
@@ -40,12 +42,13 @@
     {% endfor %}
 </table>
 
+{% if item.stockrecord %}
 <form action="{% url oscar-basket %}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Add to basket" />
 </form>
-
+{% endif %}
 
 {% endblock content %}
 
