Removed batch object and made all tests pass

--- a/oscar/templates/order_management/order.html
+++ b/oscar/templates/order_management/order.html
@@ -38,27 +38,26 @@
 
 <h3>Order contents</h3>
 
-{% for batch in order.batches.all %}
 <form action="{% url oscar-order-management-order order.number %}" method="post">
 {% csrf_token %}
-<input type="hidden" name="batch_id" value="{{ batch.id }}" />
 <input type="hidden" name="action" value="create_event" />
 <table>
-    <caption>Partner: {{batch.partner}}</caption>
     <tr>
         <th></th>
+        <th>Partner</th>
         <th>Product</th>
         <th>Quantity</th>
         <th>Line price excl tax</th>
         <th>Line price incl tax</th>
         <th>Shipping status</th>
     </tr>
-    {% for line in batch.lines.all %}
+    {% for line in order.lines.all %}
     <tr>
         <th>
             <input type="checkbox" name="order_line" value="{{ line.id }}"/>
             <input type="input" size="4" name="order_line_quantity_{{ line.id}}" value="{{ line.quantity }}" />
         </th>
+        <td>{{ line.partner }}</td>
         <td><a href="{{ line.product.get_absolute_url }}">{{ line.description }}</a></td>
         <td>{{ line.quantity }}</td>
         <td>{{ line.line_price_excl_tax|currency }}</td>
@@ -80,7 +79,6 @@
     </tr>
 </table>
 </form
-{% endfor %}
 
 <table>
     <caption>Totals</caption>
@@ -102,14 +100,12 @@
 <h3>Shipping events</h3>
 <table>
 <tr>
-    <th>Partner</th>
     <th>Event</th>
     <th>Num lines</th>
     <th>Date</th>
 </tr>
 {% for event in order.shipping_events.all %}
 <tr>
-    <td>{{ event.batch.partner }}</td>
     <td>{{ event.event_type }}</td>
     <td>{{ event.num_affected_lines }}</td>
     <td>{{ event.date }}</td>
