Updated line status method

--- a/oscar/templates/customer/order.html
+++ b/oscar/templates/customer/order.html
@@ -21,7 +21,7 @@
     </tr>
     {% if order.shipping_address.phone_number %}
     <tr>
-        <th>Concact number</th>
+        <th>Contact number</th>
         <td>{{ shipping_address.phone_number }}</td>
     </tr>
     {% endif %}
