--- a/oscar/templates/order_management/order.html
+++ b/oscar/templates/order_management/order.html
@@ -40,7 +40,7 @@
 
 <form action="{% url oscar-order-management-order order.number %}" method="post">
 {% csrf_token %}
-<input type="hidden" name="action" value="create_event" />
+<input type="hidden" name="action" value="create_line_event" />
 <table>
     <tr>
         <th></th>
@@ -79,6 +79,20 @@
     </tr>
 </table>
 </form
+
+<form action="{% url oscar-order-management-order order.number %}" method="post">
+{% csrf_token %}
+<input type="hidden" name="action" value="create_order_event" />
+Set entire order to:
+<select name="shipping_event">
+    <option value="">[Choose option]</option>
+    {% for type in shipping_options %}
+    <option value="{{ type.code }}">{{type.name}}</option>
+    {% endfor %}
+</select>  
+<input type="submit" value="Save" />
+</form>
+
 
 <table>
     <caption>Totals</caption>
