--- a/oscar/templates/order_management/browse.html
+++ b/oscar/templates/order_management/browse.html
@@ -15,7 +15,7 @@
     <tr>
         <th>Order number</th>
         <th>Total inc tax</th>
-        <th>Delivery address</th>
+        <th>Shipping status</th>
         <th>Date submitted</th>
         <th></th>
     </tr>
@@ -23,7 +23,7 @@
     <tr>
         <td>{{ order.number }}</td>
         <td>{{ order.total_incl_tax|currency }}</td>
-        <td>{{ order.shipping_address }}</td>
+        <td>{{ order.shipping_status }}</td>
         <td>{{ order.date_placed }}</td>
         <td>
             <a href="{% url oscar-order-management-order order.number %}">View</a>
