--- a/oscar/templates/checkout/preview.html
+++ b/oscar/templates/checkout/preview.html
@@ -1,110 +1,8 @@
-{% extends "layout.html" %}
+{% extends "checkout/checkout.html" %}
 
-{% load currency_filters %}
-
-{% block header %}
-<h2>Checkout / Preview</h2>
-{% endblock header %}
-
-
-{% block content %}
-
-<h3>Shipping address</h3>
-<hr />
-<table>
-    <tr>
-        <th>Address</th>
-        <td>
-            {% for field in shipping_addr.active_address_fields %}
-            {{ field }}<br/>
-            {% endfor %}
-        </td>
-    </tr>
-    {% if shipping_addr.phone_number %}
-    <tr>
-        <th>Concact number</th>
-        <td>shipping_addr.phone_number</td>
-    </tr>
-    {% endif %}
-    {% if shipping_addr.notes %}
-    <tr>
-        <th>Shipping notes</th>
-        <td>shipping_addr.notes</td>
-    </tr>
-    {% endif %} 
-</table>
-<a href="{% url oscar-checkout-shipping-address %}">Change shipping address</a>
-
-<h3>Shipping method</h3>
-<hr />
-<table>
-    <thead>
-        <tr>
-            <th>Method</th>
-            <th>Cost</th>
-            <th>Description</th>
-            <th></th>
-        </tr>
-    <thead>
-    <tbody>
-        <tr>
-            <td>{{ method.name }}</td>
-            <td>{{ method.basket_charge_incl_tax|currency }}</td>
-            <td>{{ method.description }}</td>
-            <td></td>
-    </tbody>
-</table>
-
-<h3>Payment</h3>
-<hr />
-{% if payment_method %}
-<p>{{ payment_method }}</p>
-{% endif %}
-
-<h3>Your order</h3>
-<hr />
-
-<table>
-    <tr>
-        <th>Product</th>
-        <th>Availability</th>
-        <th>Quantity</th>
-        <th>Unit price excl tax</th>
-        <th>Unit price tax</th>
-        <th>Line price excl tax</th>
-        <th>Line price incl tax</th>
-    </tr>
-    {% for line in basket.lines.all %}
-    <tr>
-        <td><a href="{{ line.product.get_absolute_url }}">{{ line.description }}</a></td>
-        <td>{{ line.product.stockrecord.availability }}</td>
-        <td>{{ line.quantity }}</td>
-        <td>{{ line.unit_price_excl_tax|currency }}</td>
-        <td>{{ line.unit_tax|currency }}</td>
-        <td>{{ line.line_price_excl_tax|currency }}</td>
-        <td>{{ line.line_price_incl_tax|currency }}</td>
-    </tr>
-    {% endfor %}
-    <tr>
-        <td colspan="5">Total</td>
-        <td>{{ basket.total_excl_tax|currency }}</td>
-        <td>{{ basket.total_incl_tax|currency }}</td>
-    </tr>
-    <tr>
-        <td colspan="5">Shipping charge</td>
-        <td>{{ shipping_total_excl_tax|currency }}</td>
-        <td>{{ shipping_total_incl_tax|currency }}</td>
-    </tr>
-    <tr>
-        <td colspan="6">Order total</td>
-        <td>{{ order_total|currency }}</td>
-    </tr>
-</table>
-
+{% block place_order %}
+<hr/>
+<h3>Place your order</h3>
 <a href="{% url oscar-checkout-payment-details %}">Place order</a>
-
-<a href="{% url oscar-basket %}">Edit order contents</a>
-
-
-{% endblock content %}
+{% endblock place_order %}
 
