--- a/oscar/templates/checkout/shipping_methods.html
+++ b/oscar/templates/checkout/shipping_methods.html
@@ -1,42 +1,8 @@
-{% extends "layout.html" %}
+{% extends "checkout/checkout.html" %}
 
 {% load currency_filters %}
 
-{% block header %}
-<h2>Checkout / Shipping Methods</h2>
-{% endblock header %}
-
-
-{% block content %}
-
-<h3>Shipping address</h3>
-<hr />
-<table>
-    <tr>
-        <th>Address</th>
-        <td>
-            {% for field in shipping_addr.active_address_fields %}
-            {{ field }}<br/>
-            {% endfor %}
-        </td>
-    </tr>
-    {% if shipping_addr.phone_number %}
-    <tr>
-        <th>Contact number</th>
-        <td>shipping_addr.phone_number</td>
-    </tr>
-    {% endif %}
-    {% if shipping_addr.notes %}
-    <tr>
-        <th>Shipping notes</th>
-        <td>shipping_addr.notes</td>
-    </tr>
-    {% endif %} 
-</table>
-<a href="{% url oscar-checkout-shipping-address %}">Change shipping address</a>
-
-<h3>Shipping method</h3>
-<hr />
+{% block shipping_method %}
 <table>
     <thead>
         <tr>
@@ -63,49 +29,4 @@
         {% endfor %}
     </tbody>
 </table>
-
-<h3>Payment</h3>
-<hr />
-
-<h3>Your order</h3>
-<hr />
-
-<table>
-    <tr>
-        <th>Product</th>
-        <th>Availability</th>
-        <th>Quantity</th>
-        <th>Unit price excl tax</th>
-        <th>Unit price tax</th>
-        <th>Line price excl tax</th>
-        <th>Line price incl tax</th>
-    </tr>
-    {% for line in basket.lines.all %}
-    <tr>
-        <td><a href="{{ line.product.get_absolute_url }}">{{ line.description }}</a></td>
-        <td>{{ line.product.stockrecord.availability }}</td>
-        <td>{{ line.quantity }}</td>
-        <td>{{ line.unit_price_excl_tax|currency }}</td>
-        <td>{{ line.unit_tax|currency }}</td>
-        <td>{{ line.line_price_excl_tax|currency }}</td>
-        <td>{{ line.line_price_incl_tax|currency }}</td>
-    </tr>
-    {% endfor %}
-    <tr>
-        <td colspan="5">Total</td>
-        <td>{{ basket.total_excl_tax|currency }}</td>
-        <td>{{ basket.total_incl_tax|currency }}</td>
-    </tr>
-    <tr>
-        <td colspan="5">Shipping charge</td>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
-        <td colspan="6">Order total</td>
-        <td>{{ order_total|currency }}</td>
-    </tr>
-</table>
-
-{% endblock content %}
-
+{% endblock shipping_method %}
