Added basic bankcard form within payment details

--- a/oscar/templates/checkout/checkout.html
+++ b/oscar/templates/checkout/checkout.html
@@ -116,6 +116,8 @@
 {% endif %}
 {% endblock payment_method %}
 
+{% block payment_details %}
+{% endblock payment_details %}
 
 {% block place_order %}
 {% endblock place_order %}
