--- a/examples/datacash/templates/checkout/payment_details.html
+++ b/examples/datacash/templates/checkout/payment_details.html
@@ -5,15 +5,12 @@
 {% block payment_details %}
 <h3>Payment details</h3>
 <h4>Bankcard</h4>
-<form method="post" action="">
+<form method="post" action="{% url oscar-checkout-payment-details %}">
+{% csrf_token %}
 {{ bankcard_form.as_p }}
+<input type="submit" value="Place order" />
 </form>
 
 {% endblock payment_details %}
 
-{% block place_order %}
-<hr/>
-<h3>Place your order</h3>
-<a href="{% url oscar-checkout-payment-details %}">Place order</a>
-{% endblock place_order %}
 
