--- a/oscar/templates/checkout/thank_you.html
+++ b/oscar/templates/checkout/thank_you.html
@@ -20,16 +20,14 @@
         <th>Line price excl tax</th>
         <th>Line price incl tax</th>
     </tr>
-    {% for batch in order.batches.all %}
-        {% for line in batch.lines.all %}
-        <tr>
-            <td><a href="{{ line.product.get_absolute_url }}">{{ line.description }}</a></td>
-            <td>{{ line.product.stockrecord.availability }}</td>
-            <td>{{ line.quantity }}</td>
-            <td>{{ line.line_price_excl_tax|currency }}</td>
-            <td>{{ line.line_price_incl_tax|currency }}</td>
-        </tr>
-        {% endfor %}
+    {% for batch in order.lines.all %}
+    <tr>
+        <td><a href="{{ line.product.get_absolute_url }}">{{ line.description }}</a></td>
+        <td>{{ line.product.stockrecord.availability }}</td>
+        <td>{{ line.quantity }}</td>
+        <td>{{ line.line_price_excl_tax|currency }}</td>
+        <td>{{ line.line_price_incl_tax|currency }}</td>
+    </tr>
     {% endfor %}
     <tr>
         <td colspan="3">Basket total</td>
