Updated settings and context processors to work with basic pods and banners

--- a/oscar/templates/layout.html
+++ b/oscar/templates/layout.html
@@ -34,6 +34,7 @@
                     {% endif %}
                 {% endfor %}
             {% endif %}
+            <a href="/admin/marketing/pod/add/?page_url={{ url_path }}" >Add a pod to this page</a>
             
             {% block header %}
             {% endblock %}
