Updated product images models

--- a/oscar/templates/product/item.html
+++ b/oscar/templates/product/item.html
@@ -10,7 +10,8 @@
 {% block content %}
 <div class="images">
     {% for image in item.images.all %}
-    <img src="{{ image.fullsize.url }}" title="{{ item.get_title }}" />
+    <img src="{{ image.fullsize_url }}" title="{{ item.get_title }}" />
+    <div class="caption">{{ image.caption }}</div>
     {% endfor %}
 </div>
 
