Added more voucher functionality:
- They can now be added to basket
- The discounts calculate correctly

--- a/oscar/templates/basket/summary.html
+++ b/oscar/templates/basket/summary.html
@@ -74,12 +74,28 @@ Your basket is currently empty - go and <a href="/shop/product/">buy something</
         <td>{{ basket.total_incl_tax|currency }}</td>
     </tr>
 </table>
+
+<form action="{% url oscar-basket %}" method="post">
+    {% csrf_token %}
+    <input type="hidden" name="action" value="add_voucher" />
+    <label for="voucher_code">Code</label>
+    <input type="text" name="code" id="voucher_code" />
+    <input type="submit" value="Add voucher" />
+</form>
+
+<h4>Basket vouchers</h4>
+<ul>
+{% for voucher in basket.vouchers.all %}
+    <li>{{ voucher.code }}</li>
+{% endfor %}
+</ul>
+
 <form action="{% url oscar-basket %}" method="post">
     {% csrf_token %}
     <input type="hidden" name="action" value="flush" />
     <input type="submit" value="Empty basket" />
 </form>
-<a href="/shop/checkout/">Checkout</a>
+<a href="{% url oscar-checkout-index %}">Checkout</a>
 
 {% endif %}
 
