Added vouchers to order history / Now tracking order within voucher application model

--- a/oscar/templates/customer/order.html
+++ b/oscar/templates/customer/order.html
@@ -53,9 +53,15 @@
         <td><a href="{{ line.product.get_absolute_url }}">{{ line.description }}</a></td>
         <td>{{ line.product.stockrecord.availability }}</td>
         <td>{{ line.quantity }}</td>
-        <td>{{ line.line_price_excl_tax|currency }}</td>
-        <td>{{ line.line_price_incl_tax|currency }}</td>
+        <td>{{ line.line_price_before_discounts_excl_tax|currency }}</td>
+        <td>{{ line.line_price_before_discounts_incl_tax|currency }}</td>
         <td>{{ line.shipping_status }}</td>
+    </tr>
+    {% endfor %}
+    {% for discount in order.discounts.all %}
+    <tr>
+        <td colspan="4">{{ discount.description }}</td>
+        <td>-{{ discount.amount|currency }}</td>
     </tr>
     {% endfor %}
 </table>
