Re-ordering of lines is now possible from the order history view

--- a/oscar/templates/customer/order.html
+++ b/oscar/templates/customer/order.html
@@ -47,6 +47,7 @@
         <th>Line price excl tax</th>
         <th>Line price incl tax</th>
         <th>Status</th>
+        <th></th>
     </tr>
     {% for line in order.lines.all %}
     <tr>
@@ -56,6 +57,13 @@
         <td>{{ line.line_price_before_discounts_excl_tax|currency }}</td>
         <td>{{ line.line_price_before_discounts_incl_tax|currency }}</td>
         <td>{{ line.shipping_status }}</td>
+        <td>
+            <form action="{% url oscar-customer-order-line order.number line.id %}" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="action" value="reorder" />
+                <input type="submit" value="Re-order" />
+            </form>
+        </td>
     </tr>
     {% endfor %}
     {% for discount in order.discounts.all %}
