Added Solr search form as default

--- a/oscar/templates/layout.html
+++ b/oscar/templates/layout.html
@@ -4,17 +4,17 @@
     <div id="container">
         <div id="header">
             <h1>Oscar // Flexible e-commerce for Django</h1>
-            <form method="get" action="{% url oscar-products %}">
-                <label id="search_input">Search all products:</label>
-                <input type="text" name="q" id="search_input" value="{{ search_term }}"/>
+            
+            <form method="get" action="{% url oscar-search %}">
+                {{ search_form.as_p }}
                 <input type="submit" value="Go!" /> 
             </form>
             
             {% if user.is_authenticated %}
-            <a href="">Profile</a>
-            <a href="">Logout</a>
+                <a href="{% url oscar-customer-profile %}">Profile</a>
+                <a href="">Logout</a>
             {% else %}
-            <a href="">Login</a>
+                <a href="">Login</a>
             {% endif %}
             
             {% for banner in banners %}
