--- a/oscar/templates/search/results.html
+++ b/oscar/templates/search/results.html
@@ -1,39 +1,44 @@
 {% extends 'layout.html' %}
+{% load currency_filters %}
 
 {% block content %}
-    <h2>Search</h2>
+<h2>Search</h2>
 
-    <form method="get" action=".">
-        <table>
-            {{ form.as_table }}
-            <tr>
-                <td>&nbsp;</td>
-                <td>
-                    <input type="submit" value="Search">
-                </td>
-            </tr>
-        </table>
-
-        {% if query %}
-            <h3>Results</h3>
-
-            {% for result in page.object_list %}
-                <p>
-                    <a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a>
-                </p>
-            {% empty %}
-                <p>No results found.</p>
-            {% endfor %}
-
-            {% if page.has_previous or page.has_next %}
-                <div>
-                    {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
-                    |
-                    {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
-                </div>
-            {% endif %}
+<ol>
+{% for result in page.object_list %}
+<li>
+    <a href="{{ result.object.get_absolute_url }}">{{ result.object.get_title }}</a><br/>
+    {% if result.object.is_group %}
+        From {{ result.object.min_variant_price_incl_tax|currency }}
+    {% else %}
+        {% if result.object.has_stockrecord %} 
+            {{ result.object.stockrecord.price_incl_tax|currency }}<br/>
+            {{ result.object.stockrecord.availability }}
         {% else %}
-            {# Show some example queries to run, maybe query syntax, something else? #}
+            Not available    
         {% endif %}
-    </form>
+    {% endif %}    
+</li>
+{% endfor %}
+</ol>
+
+{% if page_obj %}
+<div class="pagination">
+    <span class="step-links">
+    
+        {% if page_obj.has_previous %}
+            <a href="?q={{ query }}&page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?q={{ query }}&page={{ page_obj.next_page_number }}">next</a>
+        {% endif %}
+    </span>
+</div>
+{% endif %}
+
 {% endblock %}
