Added stock logic wrappers for different partners

--- a/oscar/templates/checkout/gateway.html
+++ b/oscar/templates/checkout/gateway.html
@@ -9,7 +9,7 @@
 
 <dl>
     <dt>
-        <a href="">Register</a> or <a href="">log-in</a>
+        <a href="">Register</a> or <a href="{% url oscar-customer-login %}">log-in</a>
     </dt>
     <dl>
         <p>Logging in now will give you access to your address book and ensure your
@@ -23,7 +23,6 @@
            register when checkout is complete.</p>
     </dl>
 </ol>
-
 
 {% endblock content %}
 
