--- a/oscar/templates/layout.html
+++ b/oscar/templates/layout.html
@@ -6,7 +6,7 @@
 {% block layout %}
     <div id="container">
         <div id="header">
-            <h1>Oscar // Flexible e-commerce for Django</h1>
+            <h1><a href="/">Oscar // Flexible e-commerce for Django</a></h1>
             
             <form method="get" action="{% url oscar-search %}">
                 {{ search_form.as_p }}
